<resources>
    <string name="app_name">Movie Catalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="rate">Rate</string>
    <string name="genres">Genres</string>
    <string name="language">Language</string>
    <string name="run_time">Run Time</string>
    <string name="year">Year</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="star">Star</string>
    <string name="overview">Overview</string>
</resources>
