<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivPoster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/poster"
        android:src="@drawable/ic_tv_blue"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toRightOf="@id/ivPoster"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/list_background">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            style="@style/TextViewMedium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="@style/TextViewMedium"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="2"
            android:ellipsize="end"/>
        <TextView
            android:id="@+id/tvRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            style="@style/TextViewMedium"
            app:layout_constraintTop_toBottomOf="@id/tvDesc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="5dp"
            android:layout_marginBottom="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>