<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDetail"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/poster"
            android:src="@color/soft_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarDetail" />

        <TextView
            android:id="@+id/textTitle"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            app:layout_constraintLeft_toRightOf="@id/ivPoster"
            app:layout_constraintTop_toBottomOf="@id/toolbarDetail" />

        <TextView
            android:id="@+id/textGenre"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/genres"
            app:layout_constraintLeft_toRightOf="@id/ivPoster"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/textLanguage"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/language"
            app:layout_constraintLeft_toRightOf="@id/ivPoster"
            app:layout_constraintTop_toBottomOf="@id/tvGenre" />

        <TextView
            android:id="@+id/textRunTime"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/run_time"
            app:layout_constraintLeft_toRightOf="@id/ivPoster"
            app:layout_constraintTop_toBottomOf="@id/textLanguage" />

        <TextView
            android:id="@+id/textRate"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/run_time"
            app:layout_constraintLeft_toRightOf="@id/ivPoster"
            app:layout_constraintTop_toBottomOf="@id/textRunTime" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="230dp" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextViewMediumBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:maxLines="2"
            android:text="@string/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/toolbarDetail" />

        <TextView
            android:id="@+id/tvGenre"
            style="@style/TextViewMediumBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            android:text="@string/genres"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvLanguage"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/language"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvGenre" />

        <TextView
            android:id="@+id/tvRunTime"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/run_time"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvLanguage" />

        <TextView
            android:id="@+id/tvRate"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="5dp"
            android:text="@string/rate"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvRunTime" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="20dp"
            android:background="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPoster" />

        <TextView
            android:id="@+id/textYear"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/year"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/textBudget"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/budget"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textYear" />

        <TextView
            android:id="@+id/textRevenue"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/revenue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textBudget" />

        <TextView
            android:id="@+id/textStar"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/star"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textRevenue" />

        <TextView
            android:id="@+id/textOverview"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/overview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textStar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="110dp" />

        <TextView
            android:id="@+id/tvYear"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/year"
            app:layout_constraintLeft_toRightOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/tvBudget"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/budget"
            app:layout_constraintLeft_toRightOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/textYear" />

        <TextView
            android:id="@+id/tvRevenue"
            style="@style/TextViewMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/revenue"
            app:layout_constraintLeft_toRightOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/textBudget" />

        <TextView
            android:id="@+id/tvStar"
            style="@style/TextViewMediumBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/star"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/textRevenue" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextViewMediumBlack"
            android:text="@string/overview"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/textOverview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
